# chat-app

./: .env.example  .env1.example  .env2.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
alembic/: env.py
alembic/versions/: 0dbcf9e5c52a_add_likes.py  118f8ed49462_change_likes.py  59a544db1040_initial.py  92748bb513de_change_likes.py  a1710d79877b_add_models.py  f15d67b76cc4_add_column_messages.py
balancer/: Dockerfile  logger.py  requests.py  requirements.txt  server_v1.py  server_v2.py  utils.py
chat_app/: Dockerfile  client.py  database.py  dependencies.py  logger.py  server.py  sio_server.py  utils.py
chat_app/likes/: models.py  repo.py  schemas.py
chat_app/messages/: crud.py  models.py  schemas.py
chat_app/profiles/: crud.py  models.py  schemas.py
chat_app/rooms/: models.py  schemas.py
chat_app/routers/: auth.py  likes.py  login.py  messages.py  profiles.py  rooms.py  sessions.py  users.py  utils.py
chat_app/services/: auth_service.py  room_service.py  session_service.py
chat_app/sessions/: schemas.py
chat_app/templates/: base.html  chat.html
chat_app/tests/: test_messages.py  test_users.py
chat_app/tests/fixtures/: messages.json  users.json
chat_app/tokens/: token.py
chat_app/users/: crud.py  models.py  repo.py  schemas.py
replicator/: Dockerfile  listener.py  logger.py  sql.txt  sql_operations.py  utils.py
